<resources>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_restricted">Access Restricted</string>
    <string name="action_bar_search">Search</string>
    <string name="active">Active</string>
    <string name="active_code_length_must_15">Activation Code Length Must Be 15 Digits...</string>
    <string name="active_pin">Activation Code</string>
    <string name="actors">Actors |</string>
    <string name="add">Add</string>
    <string name="add_fav">Add To Favorite</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="added_to_favourites">Added To Favourites.</string>
    <string name="age">Age |</string>
    <string name="all_data_refreshed">All Data Refreshed, Please Restart your device.</string>
    <string name="app_instructions">App Instructions</string>
    <string name="app_is_going_to_restart">Application Is Going To Restart....</string>
    <string name="app_name">Blackbox TV</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_expiry">Application Expiry:</string>
    <string name="application_version">"Application Version: "</string>
    <string name="application_version1">Application Version:</string>
    <string name="application_version_code">Application Version Code:</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="atoz">A - Z</string>
    <string name="auto_boot">Auto Boot On Start</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_play_button">Play button</string>
    <string name="back">BACK</string>
    <string name="back_button_content_description">back</string>
    <string name="back_to_player">Back To Player</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="box_loading">"                       Loading, Please wait...                       "</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="cannot_add_to_fav">Cannot Add To Favourites.</string>
    <string name="cast_d">"CAST "</string>
    <string name="catch_up">Catch-Up</string>
    <string name="change_server">Change Server</string>
    <string name="channel_already_added">Channel Already Added.</string>
    <string name="channels">CHANNELS</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_network_status">Check network Status</string>
    <string name="check_password">Check Password</string>
    <string name="checking_for_updated">Checking For Updates....</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_audio_track">Choose Audio Track</string>
    <string name="choose_auto_boot_option">Choose Auto Boot Up Option</string>
    <string name="choose_content_loading_strategy">Choose Content Loading Strategy</string>
    <string name="choose_exo_ijk_vlc_player">Choose Android Or Exo Or Vlc player for LIVE</string>
    <string name="choose_exo_ijk_vlc_player_vod">Choose Android Or Exo Or Vlc player for VOD</string>
    <string name="choose_language">Choose Application Language</string>
    <string name="choose_live_screen_style">Choose Live Screen Style</string>
    <string name="choose_live_tv_type">Choose Live Tv Type</string>
    <string name="choose_main_screen_style">Choose Main Screen Style</string>
    <string name="choose_screen_size">Choose Screen Size</string>
    <string name="choose_subtitle">Choose Subtitle Track</string>
    <string name="choose_vod_style">Choose Vod Screen</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_all_cache">Clear All Cache</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connection_type">Connection Type</string>
    <string name="current_application_version">"Current Application Version: "</string>
    <string name="default_s">Default</string>
    <string name="default_web_client_id">537235152108-hqb17l9ppqjedgfcq2s0mfb96ii0roka.apps.googleusercontent.com</string>
    <string name="define_smoothprogressbar" />
    <string name="description">Description:</string>
    <string name="ethernet_mac_id">"Ethernet Mac Id:  "</string>
    <string name="exit">Exit</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="latest_added">Latest Added</string>
    <string name="live_channels_search">Live Channels Search ...</string>
    <string name="logout1">Logout</string>
    <string name="manage_user_account">Manage User Account</string>
    <string name="manage_your_app_cached_data">Manage Your Application Cached Data</string>
    <string name="manage_your_app_network_settings">Manage Your Application Network Settings</string>
    <string name="ok">OK</string>
    <string name="open_network_settings">Open Network Settings</string>
    <string name="player_menu">Player Menu</string>
    <string name="please_enter_4_digit_password">Please Enter Four Digit Password.</string>
    <string name="please_select_sort_type">Please Select Sort Type</string>
    <string name="please_wait">Please Wait...</string>
    <string name="rating_based">Rating Based</string>
    <string name="registration_date">Registration Date:</string>
    <string name="search">Search</string>
    <string name="set_network_type">Network Type:</string>
    <string name="set_status">Status:</string>
    <string name="status_is">Status Is</string>
    <string name="wifi_mac_id">Wifi Mac Id:</string>
    <string name="you_are_not_logged_in">You Are Not Logged In To Application.</string>
    <string name="ztoa">Z - A</string>
</resources>