<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/manage_your_app_network_settings" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/set_status" />
            <TextView android:textSize="14.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/set_network_type" />
        </LinearLayout>
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
            <ProgressBar android:id="@id/main_progress" android:visibility="gone" android:layout_width="34.0dip" android:layout_height="34.0dip" android:indeterminate="true" android:layout_centerInParent="true" style="@style/Base.Widget.AppCompat.ProgressBar" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="14.0dip" android:textColor="@color/transparent60" android:id="@id/net_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/status_is" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14.0dip" android:textColor="@color/transparent60" android:id="@id/net_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/connection_type" />
                    <ImageView android:layout_gravity="bottom" android:id="@id/net_iv" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <Button android:textSize="15.0dip" android:textColor="@color/white" android:id="@id/check_network_btn" android:background="@drawable/mybuttonselector" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="312.0dip" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/check_network_status" android:layout_below="@id/movie_detail_layout" android:textAllCaps="false" />
    <Button android:textSize="15.0dip" android:textColor="@color/white" android:id="@id/open_network_btn" android:background="@drawable/mybuttonselector" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="312.0dip" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/open_network_settings" android:layout_below="@id/movie_detail_layout" android:textAllCaps="false" />
</LinearLayout>
