<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_rounded_bg" android:layout_width="550.0dip" android:layout_height="330.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/boot_box_size1" android:textColor="@color/colorDarkGrey" android:gravity="center" android:background="@drawable/select_drawable" android:padding="15.0dip" android:layout_width="550.0dip" android:layout_height="wrap_content" android:text="@string/please_select_sort_type" />
    <CheckBox android:theme="@style/CheckBoxTheme1" android:textSize="@dimen/boot_box_size1" android:textColor="@color/colorDarkGrey" android:layout_gravity="center_horizontal" android:id="@id/p1_checkbox" android:background="@drawable/checkbox_back" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="30.0dip" android:text="@string/default_s" />
    <CheckBox android:theme="@style/CheckBoxTheme1" android:textSize="@dimen/boot_box_size1" android:textColor="@color/colorDarkGrey" android:layout_gravity="center_horizontal" android:id="@id/p2_checkbox" android:background="@drawable/checkbox_back" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="30.0dip" android:text="@string/latest_added" />
    <CheckBox android:theme="@style/CheckBoxTheme1" android:textSize="@dimen/boot_box_size1" android:textColor="@color/colorDarkGrey" android:layout_gravity="center_horizontal" android:id="@id/p3_checkbox" android:background="@drawable/checkbox_back" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="30.0dip" android:text="@string/rating_based" />
    <CheckBox android:theme="@style/CheckBoxTheme1" android:textSize="@dimen/boot_box_size1" android:textColor="@color/colorDarkGrey" android:layout_gravity="center_horizontal" android:id="@id/p4_checkbox" android:background="@drawable/checkbox_back" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="30.0dip" android:text="@string/atoz" />
    <CheckBox android:theme="@style/CheckBoxTheme1" android:textSize="@dimen/boot_box_size1" android:textColor="@color/colorDarkGrey" android:layout_gravity="center_horizontal" android:id="@id/p5_checkbox" android:background="@drawable/checkbox_back" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="30.0dip" android:text="@string/ztoa" />
</LinearLayout>
