<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/channel_list_background2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/episode_size" android:textColor="@color/colorDarkGrey" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/player_menu" />
    <Button android:textSize="14.0dip" android:textColor="@color/colorDarkGrey" android:id="@id/audio_track_bt" android:background="@drawable/setting_focus100" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vlc_menu_mar_lr" android:layout_marginTop="20.0dip" android:layout_marginRight="@dimen/vlc_menu_mar_lr" android:text="@string/choose_audio_track" />
    <Button android:textSize="14.0dip" android:textColor="@color/colorDarkGrey" android:id="@id/subtitle_track_bt" android:background="@drawable/setting_focus100" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vlc_menu_mar_lr" android:layout_marginTop="20.0dip" android:layout_marginRight="@dimen/vlc_menu_mar_lr" android:text="@string/choose_subtitle" />
    <Button android:textSize="14.0dip" android:textColor="@color/colorDarkGrey" android:id="@id/exit_bt" android:background="@drawable/setting_focus100" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vlc_menu_mar_lr" android:layout_marginTop="20.0dip" android:layout_marginRight="@dimen/vlc_menu_mar_lr" android:layout_marginBottom="20.0dip" android:text="@string/exit" />
</LinearLayout>
