<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_rounded_bg" android:layout_width="550.0dip" android:layout_height="270.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="22.0dip" android:textColor="@color/colorDarkGrey" android:gravity="center" android:background="@drawable/select_drawable" android:padding="20.0dip" android:layout_width="550.0dip" android:layout_height="wrap_content" android:text="@string/search" />
    <androidx.cardview.widget.CardView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="30.0dip" card_view:cardCornerRadius="2.0dip">
        <EditText android:textSize="16.0sp" android:id="@id/search_et" android:background="@color/white" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/live_channels_search" android:inputType="text" />
    </androidx.cardview.widget.CardView>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="30.0dip">
        <Button android:textSize="20.0dip" android:textColor="@color/white" android:id="@id/search_ok_button" android:background="@drawable/playerbuttonselector" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="220.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_below="@id/movie_detail_layout" />
        <Button android:textSize="20.0dip" android:textColor="@color/white" android:id="@id/search_cancel_button" android:background="@drawable/playerbuttonselector" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="220.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/cancel" android:layout_below="@id/movie_detail_layout" />
    </LinearLayout>
</LinearLayout>
