<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/manage_your_app_cached_data" />
    <androidx.cardview.widget.CardView android:visibility="gone" android:layout_width="350.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" card_view:cardCornerRadius="6.0dip">
        <EditText android:textSize="@dimen/edittext_size" android:id="@id/clearcache_et" android:background="@color/white" android:padding="@dimen/edittext_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/please_enter_4_digit_password" android:inputType="textPassword" />
    </androidx.cardview.widget.CardView>
    <Button android:textSize="22.0dip" android:textColor="@color/white" android:id="@id/clear_cache_btn" android:background="@drawable/mybuttonselector" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="350.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="20.0dip" android:text="@string/clear_all_cache" />
</LinearLayout>
