<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0dip" android:textColor="@color/colorDarkGrey" android:id="@id/appversioninfo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="Ver" />
    <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
        <TextView android:textSize="20.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="270.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/wifi_mac_id" />
        <TextView android:textSize="20.0dip" android:textColor="@color/transparent60" android:id="@id/app_mac1" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="Mac One: 00:00:00:00:00:00" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="20.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="270.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/ethernet_mac_id" />
        <TextView android:textSize="20.0dip" android:textColor="@color/transparent60" android:id="@id/app_mac2" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="Mac Two: 00:00:00:00:00:00" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
        <TextView android:textSize="20.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="270.0dip" android:layout_height="wrap_content" android:text="@string/application_version1" />
        <TextView android:textSize="20.0sp" android:textColor="@color/transparent60" android:id="@id/app_version" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="Version " />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="20.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="270.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/application_version_code" />
        <TextView android:textSize="20.0sp" android:textColor="@color/transparent60" android:id="@id/app_versioncode" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="Version Code " />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="20.0dip" android:textColor="@color/colorDarkGrey" android:layout_width="270.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/application_expiry" />
        <TextView android:textSize="20.0sp" android:textColor="@color/transparent60" android:id="@id/app_expiry" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="" />
    </LinearLayout>
</LinearLayout>
